# chat-bot

./: .env.example  .gitignore  .railwayignore  README.md  assistant.py  audio.py  auth.py  config.py  db.py  gchat.py  gmail.py  main.py  pyproject.toml  requirements.txt  scheduler.py  storage.py  summarizer.py  tts.py
tests/: test_assistant.py  test_summarizer.py
